# JoshCppCodingChallenge

./: CMakeLists.txt  README.md  makerun.sh
.github/workflows/: build_release.yml
src/: main.cpp
src/light/: CMakeLists.txt  light.h  light_monitor.cpp  light_monitor.h
